--- a/src/app/nasabah/pencarian-nasabah/sub-pembuatan-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
+++ b/src/app/nasabah/pencarian-nasabah/sub-pembuatan-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
@@ -65,7 +65,7 @@
 
               <div class="form-group row">
                 <div class="col-3">
-                  <select class="custom-select" (change)="evenEmit()" class="form-control" id="choosenValue" style="width: 250px;">
+                  <select class="custom-select" (change)="chooseValue()" class="form-control" id="choosenValue" style="width: 250px;">
                     <option selected disabled>Pilih Salah Satu</option>
                     <option value="coorporate">Coorporate</option>
                     <option value="individual">Individual</option>
