--- a/src/app/nasabah/pencarian-nasabah/sub-pembuatan-nasabah/pembuatan-nasabah-baru/komponen/duplikat-nasabah/duplikat-nasabah.component.html
+++ b/src/app/nasabah/pencarian-nasabah/sub-pembuatan-nasabah/pembuatan-nasabah-baru/komponen/duplikat-nasabah/duplikat-nasabah.component.html
@@ -4,111 +4,86 @@
   <div id="outer" class="d-flex flex-column">
     <div class="card konten">
       <div class="card-body">
-        <h5>Duplikat Cek Nasabah Baru</h5>
+        <h5 class="text-primary font-weight-bold">Duplikat Cek Nasabah Baru</h5>
 
-        <mdb-card>
+        <!-- Duplikat Nasabah -->
+
+        <mdb-card class="mb-3">
           <mdb-card-body>
-            <div class="form-group row">
-              <label class="col-4 col-form-label font-weight-bold" style="color: #2bbbad">Kode Nasabah CIF diambil dari
-                Host</label>
-            </div>
-            <!--input 1-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">Kode Nasabah</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3"><input type="text" class="form-control" value="Corporate"></div>
-              <span class="col-6"></span>
-            </div>
-            <!--input 1-->
-            <!--input 2-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">Jenis Nasabah</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3"><input type="text" class="form-control"></div>
-              <span class="col-6"></span>
-            </div>
-            <!--input 2-->
-            <!--input 3-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">Nama Nasabah</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3"><input type="text" class="form-control"></div>
-              <span class="col-6"></span>
-            </div>
-            <!--input 3-->
-            <!--input 4-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">Alamat</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3"><input type="text" class="form-control"></div>
-              <span class="col-6"></span>
-            </div>
-            <!--input 4-->
-            <!--input 5-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label font-weight-bold"></label>
-              <label class="col-form-label pr-0  font-weight-bold"></label>
-              <div class="col-3"><input type="text" class="form-control"></div>
-              <span class="col-6"></span>
-            </div>
-            <!--input 5-->
-            <!--input 6-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label font-weight-bold">Kelurahan</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3"><input type="text" class="form-control"></div>
-              <span class="col-6"></span>
-            </div>
-            <!--input 6-->
-            <!--input 7-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label font-weight-bold">Kecamatan</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3"><input type="text" class="form-control"></div>
-              <span class="col-6"></span>
-            </div>
-            <!--input 7-->
-            <!--input 8-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">Propinsi</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3">
-                <select class="custom-select" name="optkodempn" id="optkodempn">
-                  <option selected>Pilih Salah Satu</option>
-                  <option value="1">Jawa Tengah</option>
-                  <option value="2">Jawa Timur</option>
-                </select>
+            <h6 class="text-dark">Kode Nasabah CIF Diambil Dari Host</h6>
+
+            <!-- Ubah Duplikat Nasabah Coorporate  -->
+            <div class="container pencarian-nasabah">
+
+              <div class="row">
+                <label class="col-2 font-weight-bold">Kode Nasabah</label>
+                <label>:</label>
+                <input type="text" class="form-control col-3">
               </div>
-              <span class="col-1"></span>
-              <label class="col-1 col-form-label  font-weight-bold">Kota</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3">
-                <select class="custom-select" name="optkodempn" id="optkodempn">
-                  <option selected>Pilih Salah Satu</option>
-                  <option value="1">Semararng</option>
-                  <option value="2">Surabaya</option>
-                </select>
+
+              <div class="row">
+                <label class="col-2 font-weight-bold">Jenis Nasabah</label>
+                <label>:</label>
+                <input type="text" class="form-control col-3" placeholder="Coorporate">
+              </div>
+
+              <div class="row">
+                <label class="col-2 font-weight-bold">Nama Nasabah</label>
+                <label>:</label>
+                <input type="text" class="form-control col-3">
+              </div>
+
+              <div class="row">
+                <label class="col-2 font-weight-bold">Alamat</label>
+                <label>:</label>
+                <input type="text" class="form-control col-9">
+              </div>
+
+              <div class="row">
+                <label class="col-2 font-weight-bold">Kelurahan</label>
+                <label>:</label>
+                <input type="text" class="form-control col-3">
+              </div>
+
+              <div class="row">
+                <label class="col-2 font-weight-bold">Kecamatan</label>
+                <label>:</label>
+                <input type="text" class="form-control col-3">
+              </div>
+
+              <div class="row">
+                <label class="col-2 font-weight-bold">Propinsi</label>
+                <label>:</label>
+                <mat-select placeholder="Select an option" class="col-3">
+                  <mat-option value="1">Option1</mat-option>
+                  <mat-option value="2">Option2</mat-option>
+                </mat-select>
+                <label class="col-2 font-weight-bold">Kota</label>
+                <label>:</label>
+                <mat-select placeholder="Select an option" class="col-3">
+                  <mat-option value="1">Option1</mat-option>
+                  <mat-option value="2">Option2</mat-option>
+                </mat-select>
+              </div>
+
+              <div class="row">
+                <label class="col-2 font-weight-bold">NPWP</label>
+                <label>:</label>
+                <input type="text" class="form-control col-3">
+              </div>
+
+              <div class="row d-flex justify-content-center" aria-label="Basic example mb-0">
+                <button (click)="prosesHalaman()" type="button" class="btn btn-primary justify-content-end" style="width: 170px">
+                  Proses</button>
+                <button type="button" class="btn btn-primary justify-content-end" style="width: 170px"> Kembali</button>
               </div>
             </div>
-            <!--input 8-->
-            <!--input 9-->
-            <div class="form-group row">
-              <label class="col-2 col-form-label  font-weight-bold">NPWP</label>
-              <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3"><input type="text" class="form-control"></div>
-              <span class="col-6"></span>
-            </div>
-            <!--input 9-->
-            <div class="d-flex justify-content-center">
-              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Proses</button>
-              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Kembali</button>
-            </div>
+            <!-- Ubah Duplikat Nasabah Coorporate  -->
+
           </mdb-card-body>
         </mdb-card>
 
-        <span style="height: 10vh;"></span>
       </div>
     </div>
   </div>
-
 </div>
