--- a/src/app/nasabah/pencarian-nasabah/sub-pencarian-nasabah/pencarian-nasabah-perusahaan/pencarian-nasabah-perusahaan.component.html
+++ b/src/app/nasabah/pencarian-nasabah/sub-pencarian-nasabah/pencarian-nasabah-perusahaan/pencarian-nasabah-perusahaan.component.html
@@ -1,3 +1,75 @@
-<p>
-  pencarian-nasabah-perusahaan works!
-</p>
+<!--Main layout-->
+<div class="bodyContent">
+  <!-- Start your project here-->
+  <div id="outer" class="d-flex flex-column">
+    <div class="card konten">
+      <div class="card-body">
+        <h5>Pencarian Nasabah Perusahaan</h5>
+
+        <mdb-card class="mb-3">
+          <mdb-card-body>
+
+
+            <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+              <ng-container matColumnDef="Nama Nasabah">
+                <mat-header-cell *matHeaderCellDef> Nama Nasabah </mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+              </ng-container>
+
+              <ng-container matColumnDef="Alamat">
+                <mat-header-cell *matHeaderCellDef> Alamat </mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.address}} </mat-cell>
+              </ng-container>
+
+              <ng-container matColumnDef="NPWP">
+                <mat-header-cell *matHeaderCellDef> NPWP </mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.npwp}} </mat-cell>
+              </ng-container>
+
+              <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+              <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+            </mat-table>
+
+            <!-- Tab -->
+            <mat-tab-group>
+              <mat-tab label="Duplikat Nasabah">
+
+                <h5>Pesan : Daftar Nasabah Yang Ditemukan Sama Di Database</h5>
+                <mdb-card class="mb-3">
+                  <mdb-card-body>
+                    <h6>Data Tidak Ditemukan</h6>
+
+
+                  </mdb-card-body>
+                </mdb-card>
+
+              </mat-tab>
+              <mat-tab label="Daftar Hitam Nasabah">
+                <h5>Pesan : Daftar Nasabah Yang Ditemukan Sama Di Database</h5>
+                <mdb-card class="mb-3">
+                  <mdb-card-body>
+                    <h6>Data Tidak Ditemukan</h6>
+
+
+                  </mdb-card-body>
+                </mdb-card>
+
+
+
+              </mat-tab>
+            </mat-tab-group>
+            <!-- Tab -->
+
+            <div class="row d-flex justify-content-center" aria-label="Basic example mb-0">
+              <button type="button" class="btn btn-primary justify-content-end" style="width: 170px"> Proses</button>
+              <button type="button" class="btn btn-primary justify-content-end" style="width: 170px"> Kembali</button>
+            </div>
+
+          </mdb-card-body>
+        </mdb-card>
+
+      </div>
+    </div>
+  </div>
+</div>
